# pyfly

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  install.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  getting-started.md  index.md  installation.md  spring-comparison.md  versioning.md
docs/adapters/: README.md  click.md  fastapi.md  granian.md  httpx.md  kafka.md  mongodb.md  rabbitmq.md  redis.md  sqlalchemy.md  starlette.md
docs/guides/: README.md  actuator.md  aop.md  caching.md  client.md  configuration.md  core.md  cqrs.md  custom-actuator-endpoints.md  data-document.md  data-relational.md  data.md  dependency-injection.md  events.md  messaging.md  mongodb.md  observability.md  resilience.md  scheduling.md  security.md  testing.md  validation.md  web.md
docs/modules/: README.md  actuator.md  admin.md  aop.md  caching.md  client.md  configuration.md  core.md  cqrs.md  custom-actuator-endpoints.md  data-document.md  data-relational.md  data.md  dependency-injection.md  error-handling.md  messaging.md  observability.md  scheduling.md  security.md  server.md  shell.md  testing.md  transactional.md  web-filters.md  web.md
src/pyfly/: __init__.py
tests/: conftest.py  test_hexagonal.py  test_integration.py
tests/actuator/: test_custom_endpoint.py  test_endpoints.py  test_health.py  test_loggers_endpoint.py  test_metrics_endpoint.py  test_probes.py  test_prometheus_endpoint.py  test_registry.py
tests/admin/: test_admin_api.py  test_beans_provider_enhanced.py  test_config.py  test_container_metrics.py  test_log_handler.py  test_logfile_provider.py  test_providers.py  test_runtime_provider.py  test_server_mode.py  test_server_provider.py  test_trace_collector.py
tests/aop/: test_decorators.py  test_integration.py  test_pointcut.py  test_post_processor.py  test_registry.py  test_types.py  test_weaver.py
tests/cache/: test_cache.py  test_cache_decorators.py  test_memory_stats.py  test_redis_adapter.py
tests/cli/: test_cli.py  test_db.py  test_installer.py
tests/client/: test_client.py  test_declarative.py  test_exports.py  test_integration.py  test_post_processor.py
tests/config/: test_auto.py  test_defaults.py  test_properties.py  test_pydantic_properties.py  test_server_properties.py
tests/container/: test_auto_binding.py  test_autowired.py  test_bean.py  test_container_basics.py  test_decorators.py  test_di_errors.py  test_lifecycle.py  test_named_beans.py  test_ordering.py  test_request_scope.py  test_scanner.py  test_stereotype_integration.py  test_stereotype_scanning.py  test_stereotypes.py
tests/context/: test_application_context.py  test_condition_evaluator.py  test_conditions.py  test_di_error_enrichment.py  test_environment.py  test_events.py  test_lifecycle.py  test_post_processor.py  test_request_context.py  test_wave_a_integration.py  test_wave_c_integration.py  test_wiring.py
tests/core/: test_app_context_integration.py  test_application.py  test_banner.py  test_config.py  test_placeholder_resolution.py  test_value.py
tests/cqrs/: test_authorization.py  test_command_bus.py  test_command_handler.py  test_context.py  test_decorators.py  test_fluent_builders.py  test_mediator.py  test_middleware.py  test_query_bus.py  test_query_handler.py  test_registry.py  test_types.py  test_validation.py
tests/data/: test_batch_operations.py  test_entity.py  test_filter.py  test_mapper.py  test_mapper_projection.py  test_mongo_batch_operations.py  test_mongo_document.py  test_mongo_filter.py  test_mongo_post_processor.py  test_mongo_projection_query.py  test_mongo_query_compiler.py  test_mongo_query_decorator.py  test_mongo_repository.py  test_mongo_specification.py  test_mongo_wiring.py  test_pageable.py  test_ports.py  test_projection.py  test_query.py  test_query_parser.py  test_repository.py  test_repository_post_processor.py  test_soft_delete.py  test_specification.py  test_sqlalchemy_projection_query.py  test_transactional.py  test_versioned_entity.py
tests/eda/: test_decorators.py  test_error_strategies.py  test_event_bus.py
tests/kernel/: test_exceptions.py  test_lifecycle.py
tests/logging/: test_port.py  test_structlog_adapter.py
tests/messaging/: test_decorators.py  test_exports.py  test_integration.py  test_kafka_adapter.py  test_memory_broker.py  test_rabbitmq_adapter.py  test_types.py
tests/observability/: test_observability.py
tests/resilience/: test_bulkhead.py  test_fallback.py  test_rate_limiter.py  test_time_limiter.py
tests/scheduling/: test_cron.py  test_decorators.py  test_executors.py  test_task_scheduler.py
tests/security/: test_authorization_server.py  test_csrf.py  test_method_security.py  test_middleware.py  test_oauth2_client.py  test_oauth2_resource_server.py  test_password.py  test_secure_expressions.py  test_security.py
tests/server/: test_auto_configuration.py  test_event_loop_adapters.py  test_granian_adapter.py  test_hypercorn_adapter.py  test_integration.py  test_ports.py  test_uvicorn_adapter.py
tests/shell/: test_auto_configuration.py  test_click_adapter.py  test_context_integration.py  test_decorators.py  test_exports.py  test_integration.py  test_models.py  test_param_inference.py  test_port.py  test_runner.py
tests/testing/: test_client.py  test_mock_bean.py  test_slices.py  test_testing.py
tests/transactional/: test_auto_configuration.py  test_config.py  test_integration.py
tests/validation/: __init__.py  test_validation.py
tests/web/: test_app_controllers.py  test_built_in_filters.py  test_controller.py  test_controller_stereotype.py  test_converters.py  test_cors.py  test_docs.py  test_errors.py  test_exception_handler.py  test_fastapi_adapter.py  test_fastapi_auto_configuration.py  test_file_upload_resolver.py  test_file_upload_types.py  test_filter_chain.py  test_mappings.py  test_metrics_filter.py  test_openapi.py  test_params.py  test_request_context_filter.py  test_request_logger.py  test_resolver.py  test_response.py  test_router.py  test_security_headers.py  (+3 more)
(+549 files in other folders)
