[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfly"
version = "0.1.0"
description = "The official Python implementation of the Firefly Framework — DI, CQRS, EDA, hexagonal architecture, and more."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Firefly Software Solutions Inc", email = "dev@getfirefly.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/fireflyframework/pyfly"
Repository = "https://github.com/fireflyframework/pyfly"
Organization = "https://github.com/fireflyframework"
Issues = "https://github.com/fireflyframework/pyfly/issues"

[project.optional-dependencies]
web = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]
data = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
]
postgresql = [
    "asyncpg>=0.29",
]
eda = [
    "aiokafka>=0.10",
    "aio-pika>=9.0",
]
kafka = [
    "aiokafka>=0.10",
]
rabbitmq = [
    "aio-pika>=9.0",
]
redis = [
    "redis[hiredis]>=5.0",
]
cqrs = []
cache = [
    "redis[hiredis]>=5.0",
]
client = [
    "httpx>=0.27",
]
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-starlette>=0.45b0",
    "structlog>=24.0",
]
scheduling = [
    "croniter>=2.0",
]
security = [
    "pyjwt[crypto]>=2.8",
    "bcrypt>=4.0",
]
cli = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
]
full = [
    "pyfly[web,data,postgresql,eda,cqrs,cache,client,observability,security,scheduling,cli,kafka,rabbitmq,redis]",
]
dev = [
    "pyfly[full]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
pyfly = "pyfly.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfly"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "UP046",   # PEP 695 generic class syntax (not adopting yet)
    "UP047",   # PEP 695 generic function syntax (not adopting yet)
    "N818",    # PyFlyException naming is intentional
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/pyfly"]
branch = true
