[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfly"
version = "0.2.0a11"
description = "The official Python implementation of the Firefly Framework — DI, CQRS, EDA, hexagonal architecture, and more."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Firefly Software Solutions Inc", email = "dev@getfirefly.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/fireflyframework/pyfly"
Repository = "https://github.com/fireflyframework/pyfly"
Organization = "https://github.com/fireflyframework"
Issues = "https://github.com/fireflyframework/pyfly/issues"

[project.optional-dependencies]
web = [
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.26",
]
data-relational = [
    "sqlalchemy[asyncio]>=2.0.49",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
]
data-document = [
    "motor>=3.7.1",
    "beanie>=2.1.0",
]
postgresql = [
    "asyncpg>=0.31.0",
]
eda = [
    "aiokafka>=0.13.0",
    "aio-pika>=9.6.2",
]
fastapi = [
    "fastapi>=0.135.3",
]
granian = [
    "granian>=2.7.3",
]
hypercorn = [
    "hypercorn>=0.18.0",
]
kafka = [
    "aiokafka>=0.13.0",
]
rabbitmq = [
    "aio-pika>=9.6.2",
]
redis = [
    "redis[hiredis]>=7.4.0",
]
cache = [
    "redis[hiredis]>=7.4.0",
]
client = [
    "httpx>=0.28.1",
]
observability = [
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-instrumentation-starlette>=0.62b0",
    "structlog>=25.5.0",
]
scheduling = [
    "croniter>=6.2.2",
]
security = [
    "pyjwt[crypto]>=2.12.1",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.7",
]
cli = [
    "click>=8.3.2",
    "rich>=15.0.0",
    "jinja2>=3.1.6",
    "questionary>=2.1.1",
]
shell = [
    "click>=8.3.2",
]
web-fast = [
    "pyfly[web,granian]",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]
web-fastapi = [
    "pyfly[fastapi,granian]",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]
full = [
    "pyfly[web,data-relational,data-document,postgresql,eda,cache,client,observability,security,scheduling,cli,shell,kafka,rabbitmq,redis,granian,fastapi,hypercorn]",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "coverage[toml]>=7.13.5",
    "mypy>=1.20.1",
    "ruff>=0.15.10",
    "mongomock-motor>=0.0.36",
    "jsonpath-ng>=1.8.0",
]

[project.entry-points."pyfly.auto_configuration"]
web = "pyfly.web.auto_configuration:WebAutoConfiguration"
cache = "pyfly.cache.auto_configuration:CacheAutoConfiguration"
messaging = "pyfly.messaging.auto_configuration:MessagingAutoConfiguration"
client = "pyfly.client.auto_configuration:ClientAutoConfiguration"
document = "pyfly.data.document.auto_configuration:DocumentAutoConfiguration"
relational = "pyfly.data.relational.auto_configuration:RelationalAutoConfiguration"
shell = "pyfly.shell.auto_configuration:ShellAutoConfiguration"
cqrs = "pyfly.cqrs.config.auto_configuration:CqrsAutoConfiguration"
admin = "pyfly.admin.auto_configuration:AdminAutoConfiguration"
transactional = "pyfly.transactional.auto_configuration:TransactionalEngineAutoConfiguration"
server = "pyfly.server.auto_configuration:ServerAutoConfiguration"
event-loop = "pyfly.server.auto_configuration:EventLoopAutoConfiguration"
security-jwt = "pyfly.security.auto_configuration:JwtAutoConfiguration"
security-password = "pyfly.security.auto_configuration:PasswordEncoderAutoConfiguration"
oauth2-resource-server = "pyfly.security.auto_configuration:OAuth2ResourceServerAutoConfiguration"
oauth2-authorization-server = "pyfly.security.auto_configuration:OAuth2AuthorizationServerAutoConfiguration"
oauth2-client = "pyfly.security.auto_configuration:OAuth2ClientAutoConfiguration"
scheduling = "pyfly.scheduling.auto_configuration:SchedulingAutoConfiguration"
metrics = "pyfly.observability.auto_configuration:MetricsAutoConfiguration"
tracing = "pyfly.observability.auto_configuration:TracingAutoConfiguration"
actuator = "pyfly.actuator.auto_configuration:ActuatorAutoConfiguration"
actuator-metrics = "pyfly.actuator.auto_configuration:MetricsActuatorAutoConfiguration"
aop = "pyfly.aop.auto_configuration:AopAutoConfiguration"
i18n = "pyfly.i18n.auto_configuration:I18nAutoConfiguration"
session = "pyfly.session.auto_configuration:SessionStoreAutoConfiguration"
session-filter = "pyfly.session.auto_configuration:SessionFilterAutoConfiguration"
oauth2-login = "pyfly.security.auto_configuration:OAuth2LoginAutoConfiguration"

[project.scripts]
pyfly = "pyfly.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfly"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "UP046",   # PEP 695 generic class syntax (not adopting yet)
    "UP047",   # PEP 695 generic function syntax (not adopting yet)
    "N818",    # PyFlyException naming is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/data/test_mongo_*.py" = ["E402"]  # pytest.importorskip must precede imports

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/pyfly"]
branch = true
